2001-11-19  Hugo Tyson  <hmt@redhat.com>

	* include/bootp.h (BP_STD_TX_MINPKTSZ): New symbol defining the
	minimal DHCP packet size which we should send.

	* src/lib/dhcp_prot.c (scan_dhcp_size): New routine to scan up to
	the end of the packet, for length determination and padding.
	(dhcp_size): Now uses scan_dhcp_size().
	(dhcp_size_for_send): New, uses scan_dhcp_size() and pads with
	zero up to the min packet size that we should send.
	(do_dhcp): In every sendto() call, use dhcp_size_for_send(xmit) in
	order to send padded, full size packets as needed.  5 instances.

	Credit to "Anssi Pulkkinen" <Anssi.Pulkkinen@ascom.ch> for the
	original version of this patch.

2001-11-08  Jesper Skov  <jskov@redhat.com>

	* tests/server_test.c (net_test): Fix compile error.

2001-11-02  Gary Thomas  <gthomas@redhat.com>

	* src/ecos/support.c: 
	* include/machine/ansi.h: Add C++ support [externC].

2001-11-11  Andrew Lunn <andrew.lunn@ascom.ch>

	*src/lib/recv.c: Implement the recv() call.

2001-10-29  Hugo Tyson  <hmt@redhat.com>

	* src/sys/net/if_ethersubr.c (ether_output): [CASE 106613] Even if
	the queue is full, and we are dropping the packet, try to start
	the interface anyway, to give it a chance to empty the queue if
	the device has recovered from whatever made the queue fill up in
	the first place - being unplugged from the network for example.
	This change is belt & braces with a similar policy in the periodic
	tickle function in the logical ether driver in io/eth/... ; this
	change will recover the situation immediately if the application
	continues trying to send despite ENOBUFS.

2001-10-25  Hugo Tyson  <hmt@redhat.com>

	* src/sys/net/if_bridge.c (bridge_broadcast): Count if_obytes in
	destination interfaces as well as the bridge interface; normally
	this is done in if_ethersubr.c but here we talk directly to the
	interface, bypassing that layer.  Thanks to Andrew Lunn for
	noticing that.

2001-10-18  Jonathan Larmour  <jlarmour@redhat.com>
