@@ -189,3 +189,7 @@ cdl_option CYGBLD_ISO_OPEN_MAX_HEADER {
 cdl_option CYGBLD_ISO_PMUTEXTYPES_HEADER {
     inferred_value 1 <cyg/posix/muttypes.h>
 };
+
+cdl_option CYGBLD_ISO_STRING_BSD_FUNCS_HEADER {
+    inferred_value 1 <cyg/libc/string/bsdstring.h>
+};
